--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#E0E678"
+primaryColor = "#98985B"
 backgroundColor = "#E0F5E8"
 secondaryBackgroundColor = "#52796D"
 textColor = "#000000"
