--- a/src/config.toml
+++ b/src/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#E0E678"
 backgroundColor = "#E0F5E8"
-secondaryBackgroundColor = "#52796D"
+secondaryBackgroundColor = "#BFBF58"
 textColor = "#000000"
 font = "sans serif"
