--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#98985B"
 backgroundColor = "#E0F5E8"
-secondaryBackgroundColor = "#52796D"
+secondaryBackgroundColor = "#BFBF58"
 textColor = "#000000"
 font = "sans serif"
